fix: Correction scrollbar horizontale & refacto code

--- a/webapp/src/app/app.component.css
+++ b/webapp/src/app/app.component.css
@@ -5,6 +5,6 @@
 
 div {
     flex: 1;
-    margin : 20px;
-    overflow : auto;
+    padding: 20px;
+    overflow-y: auto;
 }
